--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <title>Login | Jejugram</title>
 </head>
 <body>
-
+  <main id="loglin">
+    <div class="login_column"></div>
+      <img src="images/phoneImage.png" />
+    <div class="login_column">
+      <div class="login_box"></div>
+      <div class="login_box"></div>
+      <div class="login_t-box"></div>
+    </div>
+  </main>
+  <footer></footer>
 </body>
 </html>
