--- a/index.html
+++ b/index.html
@@ -1,48 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login | Jejugram</title>
-</head>
-<body>
-  <main id="loglin">
-    <div class="login_column">
-      <img src="images/phoneImage.png" />
-    </div>
+    <head>
+         <meta charset="UTF-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+         <title>Login | Jejugram</title>
+    </head>
+    <body>
+        <main id="loglin">
+            <div class="login_column">
+                <img src="images/phoneImage.png" />
+            </div>
 
-    <div class="login_column">
-      <div class="login_box">
-        <img src="images/loginLogo.png" />
-        <form action="feed.html" method="post" class="login_form">
-          <input type="text" name="username" placeholder="Username" required>
-          <input type="password" name="password" placeholder="Password" required>
-          <input type="submit" value="Log in">
-        </form>
-        <span class="login_diveder">
-          or
-        </span>
-        <a href="" class="login_fb_link">
-          Log in with Fcebook
-        </a>
-        <a href="" class="login_small_link">
-          Forget password?
-        </a>
-      </div>
+            <div class="login_column">
 
-      <div class="login_box">
-        <span class="login_text">Don't have an account?</span>
-        <a href="http://www.instagram.com" class="login_blue_link">Sign up</a>
-      </div>
+                <div class="login_box">
+                    <img src="images/loginLogo.png" />
+                    <form action="feed.html" method="post" class="login_form">
+                        <input type="text" name="username" placeholder="Username" required>
+                        <input type="password" name="password" placeholder="Password" required>
+                        <input type="submit" value="Log in">
+                    </form>
 
-      <div class="login_t-box">
-        <span class="login_text">Get the app</span>
-        <img src="images/ios.png" alt="appstore image" class="login_appstore">
-        <img src="images/android.png" alt="playstore image" class="login_appstore">
-      </div>
-    </div>
-  </main>
-  <footer></footer>
-</body>
+                    <span class="login_diveder">
+                        or
+                    </span>
+
+                    <a href="" class="login_fb_link">
+                        <i class="fa fa-facebook-square"></i>
+                        Log in with Facebook
+                    </a>
+                    <a href="" class="login_small_link">
+                        Forget password?
+                    </a>
+                </div>
+
+                <div class="login_box">
+                    <span class="login_text">
+                        Don't have an account?
+                    </span>
+                    <a href="http://www.instagram.com" class="login_blue_link">
+                        Sign up
+                    </a>
+                </div>
+
+                <div class="login_t-box">
+                    <span class="login_text">
+                        Get the app
+                    </span>
+                    <div class="login_appstores">
+                        <img src="images/ios.png" alt="appstore image" class="login_appstore" />
+                        <img src="images/android.png" alt="playstore image" class="login_appstore" />
+                    </div>
+                </div>
+
+            </div>
+        </main>
+        <footer>
+            <nav class="footer_nav">
+                <ul class="footer_item">
+                    <li class="footer item"><a href="" class="footer_link">About us</a></li>
+                    <li class="footer item"><a href="" class="footer_link">Support</a></li>
+                    <li class="footer item"><a href="" class="footer_link">Blog</a></li>
+                    <li class="footer item"><a href="" class="footer_link">Press</a></li>
+                    <li class="footer item"><a href="" class="footer_link">Api</a></li>
+                    <li class="footer item"><a href="" class="footer_link">Jobs</a></li>
+                    <li class="footer item"><a href="" class="footer_link">Privacy</a></li>
+                    <li class="footer item"><a href="" class="footer_link">Terms</a></li>
+                    <li class="footer item"><a href="" class="footer_link">Directory</a></li>
+                    <li class="footer item"><a href="" class="footer_link">Language</a></li>
+                </ul>
+            </nav>
+        </footer>
+    </body>
 </html>
