--- a/explore.html
+++ b/explore.html
@@ -5,7 +5,7 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <meta http-equiv="X-UA-Compatible" content="ie=edge">
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-         <title>Login | Jejugram</title>
+         <title>Explore | Jejugram</title>
     </head>
     <body>
         <nav>
@@ -19,7 +19,210 @@
                 <a href="profile.html" class="navigation_link"><i class="fa fa-user-o"></i></a>
             </div>
         </nav>
-        <main>
+        <main id="explore">
+
+            <ul class="explore_list">
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+
+                                </span>
+                                <span class="explore_list_item_info_name">
+
+                                </span>
+                            </div>
+                        </div>
+                        <butten>Follow</butten>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+
+                                </span>
+                                <span class="explore_list_item_info_name">
+
+                                </span>
+                            </div>
+                        </div>
+                        <butten>Follow</butten>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+
+                                </span>
+                                <span class="explore_list_item_info_name">
+
+                                </span>
+                            </div>
+                        </div>
+                        <butten>Follow</butten>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+
+                                </span>
+                                <span class="explore_list_item_info_name">
+
+                                </span>
+                            </div>
+                        </div>
+                        <butten>Follow</butten>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+
+                                </span>
+                                <span class="explore_list_item_info_name">
+
+                                </span>
+                            </div>
+                        </div>
+                        <butten>Follow</butten>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+
+                                </span>
+                                <span class="explore_list_item_info_name">
+
+                                </span>
+                            </div>
+                        </div>
+                        <butten>Follow</butten>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+
+                                </span>
+                                <span class="explore_list_item_info_name">
+
+                                </span>
+                            </div>
+                        </div>
+                        <butten>Follow</butten>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+
+                                </span>
+                                <span class="explore_list_item_info_name">
+
+                                </span>
+                            </div>
+                        </div>
+                        <butten>Follow</butten>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+
+                                </span>
+                                <span class="explore_list_item_info_name">
+
+                                </span>
+                            </div>
+                        </div>
+                        <butten>Follow</butten>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+
+                                </span>
+                                <span class="explore_list_item_info_name">
+
+                                </span>
+                            </div>
+                        </div>
+                        <butten>Follow</butten>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+
+                                </span>
+                                <span class="explore_list_item_info_name">
+
+                                </span>
+                            </div>
+                        </div>
+                        <butten>Follow</butten>
+                    </div>
+                </li>
+            </ul>
+
+            ul.explore_list>li.explore_list_item>((div.explore_list_item_info>(div.explore_list_item_info_image+div.explore_list_item_info_name+div.explore_list_item_info_id))+div.explore_list_item_button)*10
 
         </main>
         <footer>
