--- a/explore.html
+++ b/explore.html
@@ -26,14 +26,14 @@
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="" alt="" class="profile_image">
+                                <img src="images/users/hyeri.png" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
-
+                                    hyeri_0605
                                 </span>
                                 <span class="explore_list_item_info_name">
-
+                                    혜리
                                 </span>
                             </div>
                         </div>
