--- a/feed.html
+++ b/feed.html
@@ -19,8 +19,49 @@
                 <a href="profile.html" class="navigation_link"><i class="fa fa-user-o"></i></a>
             </div>
         </nav>
-        <main>
+        <main id="feed">
+            <div class="photo">
+                <header class="photo_header">
+                    <img src="images/users/hyeri.png" alt="">
+                    <span class="photo_uploader">
+                        #PHOTO_UPLOADER
+                    </span>
+                </header>
 
+                <img src="images/instagram_logo.jpg" alt="#IMG">
+
+                <div class="photo_info">
+                    <div class="photo_actions">
+                        <span class="photo_actions_heart">
+                            <i class="fa fa-heart-o"></i>
+                        </span>
+                        <span class="photo_actions_comment">
+                            <i class="fa fa-comment-o"></i>
+                        </span>
+                    </div>
+                    <span class="photo_likes">
+                        #PHOTO_LIKES
+                    </span>
+                    <ul class="photo_comment_list">
+                        <li class="photo_comment_item">
+                            <span class="photo_comment_writer">
+                                #writer
+                            </span>
+                            <span class="photo_comment_content">
+                                #comment
+                            </span>
+                        </li>
+                    </ul>
+                    <span class="photo_date">
+                        #PHOTO_DATE
+                    </span>
+                    <div class="photo_add_comment">
+                        <textarea placeholder="Add a comment...">
+                        </textarea>
+                        <i class="fa fa-ellipsis-h"></i>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
             <nav class="footer_nav">
