--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,67 @@
                 <a href="profile.html" class="navigation_link"><i class="fa fa-user-o"></i></a>
             </div>
         </nav>
-        <main>
+        <main id="profile">
+            <header class="profile_header">
+                <img src="images/users/heyri.png" alt="" class="profile_photo">
+                <div class="profile_info">
+                    <h1 class="profile_name">#PROFILE_NAME</h1>
+                    <a href="edit_profile.html">
+                        <button class="edit_profile_button">Edit Profile</button>
+                    </a>
+                    <i class="fa fa-cog"></i>
+                </div>
+                <ul class="profile_stat">
+                    <li class="profile_stat_posts">
+                        <span class="popularity_number">
+                            #POST_COUNT
+                        </span>
+                        <span class="stat_item">
+                            posts
+                        </span>
+                    <li class="profile_stat_followers">
+                        <span class="stat_number">
+                            #FOLLOWER_COUNT
+                        </span>
+                        <span class="stat_item">
+                            followers
+                        </span>
+                    </li>
+                    <li class="profile_stat_followings">
+                        <span class="stat_number">
+                            #FOLLOWING_COUNT
+                        </span>
+                        <span class="stat_item">
+                            following
+                        </span>
+                    </li>
+                </ul>
+                <p class="profile_description">
+                    <span class=profile_description_name>
+                        #PROFILE_DESCRIPTION_NAME
+                    </span>
+                    #DESCRIPTION
+                    <a href="" class="profile_description_homepage">
+                        #PROFILE_DESCRIPTION_HOMPAGE
+                    </a>
+                </p>
+            </header>
+
+            <div class="profile_image_grid">
+                <div class="profile_photo_row">
+                    <div class="phofile_photo">
+                        <img src="images/qab_550x230.png" alt="">
+                        <div>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-heart">504</i>
+                            </span>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-comment">22</i>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </main>
         <footer>
