--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,8 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <meta http-equiv="X-UA-Compatible" content="ie=edge">
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+         <link rel="shortcut icon" href="images/favicon.ico">
+         <link rel="stylesheet" href="css/style.css">
          <title>Profile | Jejugram</title>
     </head>
     <body>
@@ -30,26 +32,26 @@
                     <i class="fa fa-cog"></i>
                 </div>
                 <ul class="profile_stat">
-                    <li class="profile_stat_posts">
-                        <span class="popularity_number">
+                    <li class="profile_stat_item">
+                        <span class="profile_stat_label">
                             #POST_COUNT
                         </span>
-                        <span class="stat_item">
+                        <span class="profile_stat_number">
                             posts
                         </span>
-                    <li class="profile_stat_followers">
-                        <span class="stat_number">
+                    <li class="profile_stat_item">
+                        <span class="profile_stat_label">
                             #FOLLOWER_COUNT
                         </span>
-                        <span class="stat_item">
+                        <span class="profile_stat_number">
                             followers
                         </span>
                     </li>
-                    <li class="profile_stat_followings">
-                        <span class="stat_number">
+                    <li class="profile_stat_item">
+                        <span class="profile_stat_label">
                             #FOLLOWING_COUNT
                         </span>
-                        <span class="stat_item">
+                        <span class="profile_stat_number">
                             following
                         </span>
                     </li>
@@ -97,6 +99,9 @@
                     <li class="footer item"><a href="" class="footer_link">Language</a></li>
                 </ul>
             </nav>
+            <span class="copy_right">
+                © 2017 Jejugram
+            </span>
         </footer>
     </body>
 </html>
