--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <meta http-equiv="X-UA-Compatible" content="ie=edge">
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+         <link rel="shortcut icon" href="images/favicon.ico">
+         <link rel="stylesheet" href="css/style.css">
          <title>Login | Jejugram</title>
     </head>
     <body>
@@ -72,6 +74,9 @@
                     <li class="footer item"><a href="" class="footer_link">Language</a></li>
                 </ul>
             </nav>
+            <span class="copy_right">
+                © 2017 Jejugram
+            </span>
         </footer>
     </body>
 </html>
