--- a/homework.html
+++ b/homework.html
@@ -9,22 +9,24 @@
         html, body{
             margin : 0;
             padding : 0;
+
+            height: 100%;
         }
 
         body{
             display: flex;
-            flex-direction: row;
             align-items: center;
             justify-content: center;
 
 
             background-color: red;
+            height: 100%;
 
 
         }
 
         .feed{
-            width: 1000px;
+            width: 50%;
             height: 600px;
 
             display: flex;
@@ -32,7 +34,7 @@
             align-items: center;
 
             background-color: yellow;
-            border: 10px solid green;
+            border: 30px double green;
         }
         .feed-child{
             display: flex;
@@ -54,7 +56,7 @@
             border: 10px inset pink;
 
             display: flex;
-            align-items: center;
+            align-items: flex-end;
             justify-content: space-around;
         }
         .different{
