--- a/image_detail.html
+++ b/image_detail.html
@@ -51,17 +51,17 @@
         </main>
         <footer>
             <nav class="footer_nav">
-                <ul class="footer_item">
-                    <li class="footer item"><a href="" class="footer_link">About us</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Support</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Blog</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Press</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Api</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Jobs</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Privacy</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Terms</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Directory</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Language</a></li>
+                <ul class="footer_list">
+                    <li class="footer_item"><a href="" class="footer_link">About us</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Support</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Blog</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Press</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Api</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Jobs</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Privacy</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Terms</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Directory</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Language</a></li>
                 </ul>
             </nav>
             <span class="copy_right">
