--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-         <meta charset="UTF-8">
-         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-         <link rel="shortcut icon" href="images/favicon.ico">
-         <link rel="stylesheet" href="css/style.css">
-         <title>Login | Jejugram</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="shortcut icon" href="images/favicon.ico">
+        <link rel="stylesheet" href="css/login.css">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Login | Jejugram</title>
     </head>
     <body>
-        <main id="loglin">
+        <main id="login">
             <div class="login_column">
                 <img src="images/phoneImage.png" />
             </div>
@@ -61,17 +62,17 @@
         </main>
         <footer>
             <nav class="footer_nav">
-                <ul class="footer_item">
-                    <li class="footer item"><a href="" class="footer_link">About us</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Support</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Blog</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Press</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Api</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Jobs</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Privacy</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Terms</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Directory</a></li>
-                    <li class="footer item"><a href="" class="footer_link">Language</a></li>
+                <ul class="footer_list">
+                    <li class="footer_item"><a href="" class="footer_link">About us</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Support</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Blog</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Press</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Api</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Jobs</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Privacy</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Terms</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Directory</a></li>
+                    <li class="footer_item"><a href="" class="footer_link">Language</a></li>
                 </ul>
             </nav>
             <span class="copy_right">
