--- a/profile.html
+++ b/profile.html
@@ -10,15 +10,17 @@
          <title>Profile | Jejugram</title>
     </head>
     <body>
-        <nav>
-            <a href="feed.html">
-                <img src="images/logo.png" />
-            </a>
-            <input type="text" placeholder="Search">
-            <div>
-                <a href="explore.html" class="navigation_link"><i class="fa fa-compass"></i></a>
-                <a href="#" class="navigation_link"><i class="fa fa-heart-o"></i></a>
-                <a href="profile.html" class="navigation_link"><i class="fa fa-user-o"></i></a>
+        <nav class="navigation">
+            <div class="navigation_box">
+                <a href="feed.html">
+                    <img src="images/logo.png" />
+                </a>
+                <input type="text" placeholder="Search">
+                <div class="navigation_links">
+                    <a href="explore.html" class="navigation_link"><i class="fa fa-compass"></i></a>
+                    <a href="#" class="navigation_link"><i class="fa fa-heart-o"></i></a>
+                    <a href="profile.html" class="navigation_link"><i class="fa fa-user-o"></i></a>
+                </div>
             </div>
         </nav>
         <main id="profile">
