--- a/explore.html
+++ b/explore.html
@@ -10,15 +10,17 @@
          <title>Explore | Jejugram</title>
     </head>
     <body>
-        <nav>
-            <a href="feed.html">
-                <img src="images/logo.png" />
-            </a>
-            <input type="text" placeholder="Search">
-            <div>
-                <a href="explore.html" class="navigation_link"><i class="fa fa-compass"></i></a>
-                <a href="#" class="navigation_link"><i class="fa fa-heart-o"></i></a>
-                <a href="profile.html" class="navigation_link"><i class="fa fa-user-o"></i></a>
+        <nav class="navigation">
+            <div class="navigation_box">
+                <a href="feed.html">
+                    <img src="images/logo.png" />
+                </a>
+                <input type="text" placeholder="Search">
+                <div class="navigation_links">
+                    <a href="explore.html" class="navigation_link"><i class="fa fa-compass"></i></a>
+                    <a href="#" class="navigation_link"><i class="fa fa-heart-o"></i></a>
+                    <a href="profile.html" class="navigation_link"><i class="fa fa-user-o"></i></a>
+                </div>
             </div>
         </nav>
         <main id="explore">
@@ -28,7 +30,7 @@
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="images/users/hyeri.png" alt="" class="profile_image">
+                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
@@ -39,192 +41,212 @@
                                 </span>
                             </div>
                         </div>
-                        <butten>Follow</butten>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
                     </div>
                 </li>
                 <li class="explore_list_item">
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="" alt="" class="profile_image">
+                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
-
+                                    hyeri_0605
                                 </span>
                                 <span class="explore_list_item_info_name">
-
+                                    혜리
                                 </span>
                             </div>
                         </div>
-                        <butten>Follow</butten>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
                     </div>
                 </li>
                 <li class="explore_list_item">
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="" alt="" class="profile_image">
+                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
-
+                                    hyeri_0605
                                 </span>
                                 <span class="explore_list_item_info_name">
-
+                                    혜리
                                 </span>
                             </div>
                         </div>
-                        <butten>Follow</butten>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
                     </div>
                 </li>
                 <li class="explore_list_item">
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="" alt="" class="profile_image">
+                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
-
+                                    hyeri_0605
                                 </span>
                                 <span class="explore_list_item_info_name">
-
+                                    혜리
                                 </span>
                             </div>
                         </div>
-                        <butten>Follow</butten>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
                     </div>
                 </li>
                 <li class="explore_list_item">
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="" alt="" class="profile_image">
+                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
-
+                                    hyeri_0605
                                 </span>
                                 <span class="explore_list_item_info_name">
-
+                                    혜리
                                 </span>
                             </div>
                         </div>
-                        <butten>Follow</butten>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
                     </div>
                 </li>
                 <li class="explore_list_item">
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="" alt="" class="profile_image">
+                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
-
+                                    hyeri_0605
                                 </span>
                                 <span class="explore_list_item_info_name">
-
+                                    혜리
                                 </span>
                             </div>
                         </div>
-                        <butten>Follow</butten>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
                     </div>
                 </li>
                 <li class="explore_list_item">
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="" alt="" class="profile_image">
+                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
-
+                                    hyeri_0605
                                 </span>
                                 <span class="explore_list_item_info_name">
-
+                                    혜리
                                 </span>
                             </div>
                         </div>
-                        <butten>Follow</butten>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
                     </div>
                 </li>
                 <li class="explore_list_item">
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="" alt="" class="profile_image">
+                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
-
+                                    hyeri_0605
                                 </span>
                                 <span class="explore_list_item_info_name">
-
+                                    혜리
                                 </span>
                             </div>
                         </div>
-                        <butten>Follow</butten>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
                     </div>
                 </li>
                 <li class="explore_list_item">
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="" alt="" class="profile_image">
+                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
-
+                                    hyeri_0605
                                 </span>
                                 <span class="explore_list_item_info_name">
-
+                                    혜리
                                 </span>
                             </div>
                         </div>
-                        <butten>Follow</butten>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
                     </div>
                 </li>
                 <li class="explore_list_item">
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="" alt="" class="profile_image">
+                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
-
+                                    hyeri_0605
                                 </span>
                                 <span class="explore_list_item_info_name">
-
+                                    혜리
                                 </span>
                             </div>
                         </div>
-                        <butten>Follow</butten>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
                     </div>
                 </li>
                 <li class="explore_list_item">
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="" alt="" class="profile_image">
+                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
-
+                                    hyeri_0605
                                 </span>
                                 <span class="explore_list_item_info_name">
-
+                                    혜리
                                 </span>
                             </div>
                         </div>
-                        <butten>Follow</butten>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
                     </div>
                 </li>
             </ul>
-
-            ul.explore_list>li.explore_list_item>((div.explore_list_item_info>(div.explore_list_item_info_image+div.explore_list_item_info_name+div.explore_list_item_info_id))+div.explore_list_item_button)*10
 
         </main>
         <footer>
